--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -92,10 +92,22 @@
             <h2 class="team-head">Our Team</h2>
             <div class="container">
                 <div class="namecard hidden">
+                    <img src="./files/Aman - Aman Choudhary (1).jpg" alt="Aman Choudhary" class="photo">
+                    <div class="info">
+                        <div class="name">Aman Choudhary</div>
+                        <div class="position">Club Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/_aman.chou_/profilecard/?igsh=MXVxdjV2ZGsxZW9kdA=="><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/aman-choudhary-954833292"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ee230002008@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
                     <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733833350/Screenshot_2024-12-10_175146_hijuvv.png" alt="Harshit Gupta" class="photo">
                     <div class="info">
                         <div class="name">Harshit Gupta</div>
-                        <div class="position">Club Head</div>
+                        <div class="position">Ex Club Head</div>
                     </div>
                     <div class="social-links">
                         <a href="https://www.instagram.com/harsit_tugpa/"><i class="fab fa-instagram"></i></a>
@@ -107,7 +119,7 @@
                     <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733833101/me_erjdqn.jpg" alt="Abhijit Kashyap" class="photo">
                     <div class="info">
                         <div class="name">Abhijit Kashyap</div>
-                        <div class="position">Co-Head</div>
+                        <div class="position">Member</div>
                     </div>
                     <div class="social-links">
                         <a href="https://www.instagram.com/abhijitkashyap50/"><i class="fab fa-instagram"></i></a>
@@ -139,18 +151,7 @@
                         <a href="mailto:ee210002067@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="namecard hidden">
-                    <img src="./files/Aman - Aman Choudhary (1).jpg" alt="Aman Choudhary" class="photo">
-                    <div class="info">
-                        <div class="name">Aman Choudhary</div>
-                        <div class="position">Streaming Head</div>
-                    </div>
-                    <div class="social-links">
-                        <a href="https://www.instagram.com/_aman.chou_/profilecard/?igsh=MXVxdjV2ZGsxZW9kdA=="><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/aman-choudhary-954833292"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:ee230002008@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
-                    </div>
-                </div>
+                
 
                 <div class="namecard hidden">
                     <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733833428/Screenshot_2024-12-10_175337_rrxl2a.png" alt="Aayush Yadav" class="photo">
